<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu1"
        android:title="@string/menu1"
        android:icon="@drawable/ic_baseline_playlist_play_24"
        android:iconTint="@color/bottomIconColor"
        android:enabled="true" />

    <item
        android:id="@+id/menu2"
        android:title="@string/menu2"
        android:icon="@drawable/ic_baseline_library_music_24"
        android:iconTint="@color/bottomIconColor"
        android:enabled="true" />

    <item
        android:id="@+id/menu3"
        android:title="@string/menu3"
        android:icon="@drawable/ic_baseline_playlist_play_24"
        android:iconTint="@color/bottomIconColor"
        android:enabled="true" />

    <item
        android:id="@+id/menu4"
        android:title="@string/menu4"
        android:icon="@drawable/ic_baseline_album_24"
        android:iconTint="@color/bottomIconColor"
        android:enabled="true" />

    <item
        android:id="@+id/menu5"
        android:title="@string/menu5"
        android:icon="@drawable/ic_baseline_folder_24"
        android:iconTint="@color/bottomIconColor"
        android:enabled="true" />
</menu>